--- a/src/mpiblast/Makefile
+++ b/src/mpiblast/Makefile
@@ -53,94 +53,64 @@
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 # 
 # @Copyright@
-#
-# $Log$
 
-ifndef ROLLCOMPILER
-  ROLLCOMPILER = gnu
-endif
-ifndef ROLLNETWORK
-  ROLLNETWORK = eth
-endif
-ifndef ROLLMPI
-  ROLLMPI = openmpi
-endif
 REDHAT.ROOT = $(CURDIR)/../../
 
 -include $(ROCKSROOT)/etc/Rules.mk
 include Rules.mk
 include pull.mk
 
-
-LINUXMODE = gcc
+CC = gcc
 ifeq ("$(ROLLCOMPILER)", "intel")
-  LINUXMODE = icc
+  CC = icc
 endif
 ifeq ("$(ROLLCOMPILER)", "pgi")
-  LINUXMODE = pgcc
+  CC = pgcc
 endif
 
-COMPILERSETUP = \
-  if test -e /etc/profile.d/modules.sh; then \
-    . /etc/profile.d/modules.sh; \
-    module load intel; \
-    export MKLLIB=`find $${MKL_ROOT}/lib/* -maxdepth 0 | head -1`; \
-    export BLASOPT="-L$${MKLLIB} -Wl,--start-group -lmkl_intel_ilp64 \
-                    -lmkl_sequential -lmkl_core -Wl,--end-group -lpthread"; \
-    module unload intel; \
-    latestModule=`module avail 2>&1 | grep -o '$(ROLLCOMPILER)/[^ (]*' | sed 's/$(ROLLCOMPILER).//' | sort -t. -k1,1n -k2,2n -k3,3n | tail -1`; \
-    module load $(ROLLCOMPILER)/$${latestModule}; \
-  fi
+COMPILERSETUP =  \
+  module load $(ROLLCOMPILER) || true; \
+  echo === Compiler and version ===; \
+  $(CC) --version
 
-ifeq ("$(ROLLNETWORK)", "eth")
-  MPIMODULE = $(ROLLMPI)
-else
-  MPIMODULE = $(ROLLMPI)_$(ROLLNETWORK)
-endif
+MKLSETUP = \
+  module load mkl || true; \
+  echo === MKL_ROOT ===; \
+  echo $${MKL_ROOT}; \
+  export MKLLIB=`find $${MKL_ROOT}/lib/* -maxdepth 0 | head -1`
 
 MPISETUP = \
-  if test -e /etc/profile.d/modules.sh; then \
-    . /etc/profile.d/modules.sh; \
-    module load $(MPIMODULE); \
-  fi; \
-  export MPI_HOME=`which mpicxx | perl -pe 's!/bin/.*!!'`; \
-  if test -z "$${MPI_HOME}"; then \
-    export MPI_HOME=/opt/$(ROLLMPI); \
-  fi; \
-  echo Using MPI from $${MPI_HOME}; \
-  export PATH=$${PATH}:$${MPI_HOME}/bin; \
-  export LD_LIBRARY_PATH=$${LD_LIBRARY_PATH}:$${MPI_HOME}/lib
+  module load $(ROLLMPI) || true; \
+  echo === MPIHOME ===; \
+  echo $${MPIHOME}
 
 build: $(SRC_DIRS)
-	@echo "::: Package $(MPIBLAST_NAME) build complete :::"
 	( 			\
-	      $(COMPILERSETUP); \
-	      $(MPISETUP); \
-	      cd $(MPIBLAST_NAME)-$(VERSION);  \
-              export LINUX_MODE=$(LINUXMODE); \
-              ncbi/make/makedis.csh; \
-              export CFLAGS="-g -O0"; \
-              export CXXFLAGS="-g -O0"; \
-              export CC=mpicc; \
-              export CXX=mpicxx; \
-              export CPPFLAGS=-I$(CURDIR)/$(MPIBLAST_NAME)-$(VERSION)/ncbi/include; \
-	      ./configure --prefix=$(PKGROOT) -with-ncbi=$(CURDIR)/$(MPIBLAST_NAME)-$(VERSION)/ncbi --with-mpi=/opt/$(ROLLMPI)/$(ROLLCOMPILER)/$(ROLLNETWORK); \
-	      $(MAKE)	\
+	  $(COMPILERSETUP); \
+	  $(MKLSETUP); \
+	  $(MPISETUP); \
+	  cd $(SOURCE_DIR); \
+	  export LINUX_MODE=$(CC); \
+	  ncbi/make/makedis.csh; \
+	  export CFLAGS="-g -O0"; \
+	  export CXXFLAGS="-g -O0"; \
+	  export CC=mpicc; \
+	  export CXX=mpicxx; \
+	  export CPPFLAGS=-I$(CURDIR)/$(SOURCE_DIR)/ncbi/include; \
+	  ./configure --prefix=$(PKGROOT) \
+	              --with-ncbi=$(CURDIR)/$(SOURCE_DIR)/ncbi \
+	              --with-mpi=$${MPIHOME}; \
+	  $(MAKE) \
 	)
+	@echo "::: Package $(NAME) build complete :::"
 	
 install::
-	mkdir -p $(ROOT)/$(PKGROOT)
-	mkdir -p $(PKGROOT)
-	mount --bind $(ROOT)/$(PKGROOT) $(PKGROOT)
+	mkdir -p -m 755 $(ROOT)/$(PKGROOT)
 	( 			\
-	      $(COMPILERSETUP); \
-	      $(MPISETUP); \
-	      cd $(MPIBLAST_NAME)-$(VERSION);  \
-	      $(MAKE) install	\
+	  cd $(SOURCE_DIR); \
+	  $(MAKE) prefix=$(ROOT)/$(PKGROOT) install \
 	)
-	umount $(PKGROOT)
-	@echo "::: Package $(MPIBLAST_NAME) install complete :::"
+	@echo "::: Package $(NAME) install complete :::"
 
 clean::
-	rm -rf $(MPIBLAST_NAME)-$(VERSION)
-	-umount $(PKGROOT)
+	rm -rf $(SOURCE_DIR)
