--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,4 @@
+#
 # $Id$
 #
 # @Copyright@
@@ -55,15 +56,25 @@
 # @Copyright@
 #
 # $Log$
+#
 
--include $(shell $(ROCKSROOT)/bin/arch).mk
--include $(shell $(ROCKSROOT)/bin/os).mk
+-include $(shell ${ROCKSROOT}/bin/arch).mk
+-include $(shell ${ROCKSROOT}/bin/os).mk
 
-default:	pkg
+default:
+	@echo "copyright|rpm|pkg|clean"
 
-copyright pkg rpm clean::
+copyright rpm pkg clean::
 	for i in $(SRCDIRS) ; do \
-		cd $$i; \
-		$(MAKE) $@ || exit 2 ; \
-		cd ..; \
+	  grep -q ROLLCOMPILER $$i/version.mk; \
+	  if test $$? -eq 0; then \
+	    for c in $(ROLLCOMPILER); do \
+	      for m in $(ROLLMPI); do \
+	        echo make $@ in $$i with ROLLCOMPILER=$$c ROLLMPI=$$m; \
+	        (cd $$i && $(MAKE) ROLLCOMPILER=$$c ROLLMPI=$$m $@) || exit 2; \
+              done; \
+	    done; \
+	  else \
+	    (cd $$i && $(MAKE) ROLLCOMPILER="$(ROLLCOMPILER)" ROLLMPI="$(ROLLMPI)" $@) || exit 2; \
+	  fi; \
 	done
