Remove cuda from rpm description.
Resolves APS-470.

--- a/src/mpiblast/Makefile
+++ b/src/mpiblast/Makefile
@@ -68,8 +68,7 @@ DESCRIPTION:
 	  $(DESCRIBE_PKG); \
 	  $(DESCRIBE_CC); \
 	  $(DESCRIBE_MKL); \
-	  $(DESCRIBE_MPI); \
-	  $(DESCRIBE_CUDA) \
+	  $(DESCRIBE_MPI) \
 	) > $@
 
 LICENSE: $(SRC_DIRS)
